--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 meta(charset="UTF-8")
 meta(name="viewport", content="width=device-width,initial-scale=1")
 title Kindergarten Admin Portal
-link(rel="stylesheet", href="/css/index")
+link(rel="stylesheet", href="/css/index.css")
 //  Header 
 header
   nav
