--- a/views/children_list.pug
+++ b/views/children_list.pug
@@ -2,40 +2,81 @@ meta(charset="UTF-8")
 meta(name="viewport", content="width=device-width,initial-scale=1")
 title Children List - Kindergarten System
 link(rel="stylesheet", href="/css/childrenlist.css")
+link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css")
+
 .sidebar
-  h2(style="text-align: center; padding: 15px;") Kindergarten
-  ul
-    li(onclick="/admin") Dashboard
-    li(onclick="location.href=\'register_child.html\'") Register Child
-    li.active Children List
-    li Reports
-    li Settings
-    li Logout
+  .sidebar-header
+    h2 Kindergarten System
+  ul.sidebar-menu
+    li
+      a(href="/admin")
+        i.fas.fa-home
+        span Dashboard
+    li
+      a(href="/addition")
+        i.fas.fa-user-plus
+        span Register Child
+    li
+      a(href="/childrenslist").active
+        i.fas.fa-users
+        span Children List
+    li
+      a(href="/attendance")
+        i.fas.fa-clipboard-check
+        span Attendance
+    li
+      a(href="/reports")
+        i.fas.fa-chart-bar
+        span Reports
+    li
+      a(href="/settings")
+        i.fas.fa-cog
+        span Settings
+    li
+      a(href="/logout")
+        i.fas.fa-sign-out-alt
+        span Logout
+
 .main-content
   .header
     h1 Children List
-    button.add-child-btn(onclick="location.href=\'register_child.html\'") Add New Child
+    a.add-child-btn(href="/addition")
+      i.fas.fa-plus
+      | Add Child
   .search-bar
     input(type="text", placeholder="Search children...")
-    button Search
+    button
+      i.fas.fa-search
+      | Search
   table
     thead
       tr
-        th ID
-        th Child Name
-        th Parent Name
+        th First Name
+        th Last Name
         th Age
         th Class
+        th Parent Name
         th Residence
         th Actions
     tbody
-      tr
-        td 1
-        td Emma Johnson
-        td Sarah Johnson
-        td 4
-        td KG 1
-        td 123 Main St
-        td
-          button.action-btn.edit-btn Edit
-          button.action-btn.delete-btn Delete
+      if childrens && childrens.length > 0
+        each child in childrens
+          tr
+            td= child.firstname
+            td= child.lastname
+            td= child.age
+            td= child.class
+            td= child.parentname
+            td= child.residence
+            td
+              a.action-btn.edit-btn(href="/updatechild/" + child._id)
+                i.fas.fa-edit
+                | Update
+              form(action="/deletechild", method="POST", style="display: inline;")
+                input(type="hidden", name="id", value=child._id)
+                button.action-btn.delete-btn(type="submit")
+                  i.fas.fa-trash-alt
+                  | Delete
+      else
+        tr
+          td(colspan="7", style="text-align: center;") No children found
